[package]
name = "heapstore"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2021"

[features]
default = ["profile"]
#</strip>
profile = []
stat = []
mock = []
hs_33500 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
rand = { version = "0.9.0", features = ["small_rng"] }
common = { path = "../../common" }
dashmap = "6.1"
concurrent-queue = "2.5"
libc = {version = "0.2.169"}

[dev-dependencies]
criterion = "0.5"
temp_testdir = "0.2"



[[bench]]
name = "page_bench"
harness = false

